--- a/docs/algorithm/04.md
+++ b/docs/algorithm/04.md
@@ -89,3 +89,74 @@ var twoSum2 = (nums, target) => {
   }
 };
 ```
+
+## 删除排序树组中的重复项
+
+给定一个排序数组，你需要在 原地 删除重复出现的元素，使得每个元素只出现一次，返回移除后数组的新长度。
+
+不要使用额外的数组空间，你必须在 原地 修改输入数组 并在使用 O(1) 额外空间的条件下完成。
+
+示例 1:
+
+给定数组 nums = [1,1,2],
+
+函数应该返回新的长度 2, 并且原数组 nums 的前两个元素被修改为 1, 2。
+
+```js
+var removeDuplice = (nums) => {
+  for (var i = 0; i < nums.length; i++) {
+    if (nums.indexOf(nums[i]) !== i) {
+      nums.splice(i, 1);
+    } else {
+      i++;
+    }
+  }
+  return nums.length;
+};
+```
+
+## 合并两个有序整数数组
+
+给你两个有序整数数组  nums1 和 nums2，请你将 nums2 合并到  nums1  中，使 nums1 成为一个有序数组。
+
+输入：nums1 = [1], m = 1, nums2 = [], n = 0
+输出：[1]
+
+输入:
+nums1 = [1,2,3,0,0,0], m = 3
+nums2 = [2,5,6], n = 3
+
+输出: [1,2,2,3,5,6]
+
+```js
+function mergeList(num1, m, num2, n) {
+  for(let i=0; i<n; i < n; i++){
+    num1[m+i]=num2[i]
+  }
+  return  nums1.sort((a,b)=>a-b)
+}
+```
+
+## 使用 js 实现小数点相加
+
+使用 es6 提供的 Number.EPSILON 属性，而它的值就是 2-52，只要判断 0.1+0.2-0.3 是否小于 Number.EPSILON，如果小于，就可以判断为 0.1+0.2 ===0.3
+
+`使用字符串分割相加`
+
+```js
+function accAdd(num1, num2) {
+  var r1, r2, m;
+  try {
+    r1 = num1.toString().split(".")[1].length;
+  } catch (error) {
+    r1 = 0;
+  }
+  try {
+    r2 = num2.toString().split(".")[1].length;
+  } catch (error) {
+    r2 = 0;
+  }
+  m = Math.pow(10, Math.max(r1, r2));
+  return (num1 * m + num2 * m) / m;
+}
+```
