--- a/docs/algorithm/05.md
+++ b/docs/algorithm/05.md
@@ -262,3 +262,39 @@ const answer=(s)=>{
 }
 
 ```
+
+## 实现一个strStr()函数
+ 实现一个strStr()函数,给定两个字符串,函数,一个是haystack,needle,请在haystack中找出needle出现的第一个位置,如果不存在,则返回-1
+
+        示例 1：
+
+        输入：haystack = "hello", needle = "ll"
+        输出：2
+        示例 2：
+
+        输入：haystack = "aaaaa", needle = "bba"
+        输出：-1
+        示例 3：
+
+        输入：haystack = "", needle = ""
+        输出：0
+
+
+        提示：
+
+        0 <= haystack.length, needle.length <= 5 * 104
+        haystack 和 needle 仅由小写英文字符组成
+
+```js
+  var strStr=(haystack,needle)=>{
+    if(needle==='')return 0
+    for(let index=0;index<haystack.length;index++){
+      if(haystack[i]===needle[0]){
+        if(haystack.substring(index,index+needle.length)===needle)return index
+      }
+    }
+    return -1
+  }
+
+
+```
