--- a/docs/algorithm/06.md
+++ b/docs/algorithm/06.md
@@ -118,3 +118,109 @@ const firstUniqChar = function(s) {
    
 }
 ```
+## 字符串中的第一个唯一字符
+给定一个字符串 s ，找到 它的第一个不重复的字符，并返回它的索引 。如果不存在，则返回 -1 。
+
+输入: s = "leetcode"
+输出: 0
+
+输入: s = "loveleetcode"
+输出: 2
+
+```js
+var firstUniqChar = function(s) {
+    const map={};
+    for(const v of s){
+        map[v]=(map[v]||0)+1
+    }
+    for(let index=0;index<s.length;index++){
+        if(map[s[index]]===1){
+            return index
+        }
+    }
+    return -1
+};
+```
+
+## 给定两个数组计算交集
+
+```js
+输入：nums1 = [1,2,2,1], nums2 = [2,2]
+输出：[2]
+
+输入：nums1 = [4,9,5], nums2 = [9,4,9,8,4]
+输出：[9,4]
+解释：[4,9] 也是可通过的
+
+
+function interSection(num1,num2){
+    var n1=new Set(num1)//数组去重
+    var n2=new Set(num2)
+    let arr=[];
+    n1.forEach(item=>{
+        if(n2.has(item)){
+            arr.push(item)
+        }
+    })
+    return arr;
+}
+
+
+```
+
+## 两个数组的交集 || 
+给你两个整数数组 nums1 和 nums2 ，请你以数组形式返回两数组的交集。返回结果中每个元素出现的次数，应与元素在两个数组中都出现的次数一致（如果出现次数不一致，则考虑取较小值）。可以不考虑输出结果的顺序。
+
+输入：nums1 = [1,2,2,1], nums2 = [2,2]
+输出：[2,2]
+
+输入：nums1 = [4,9,5], nums2 = [9,4,9,8,4]
+输出：[4,9]
+
+```js
+//在 js 中，只要用一个空对象来记录数组每个键的个数。
+//每次发现重复的数据，就把记录的数据个数减一，个数为空时，就不处理。
+
+var intersect=(num1,num2)=>{
+    let data={},
+    result=[];
+    num1.forEach(item=>{
+        if(data[item]){
+            data[item]++
+        }else{
+            data[item]=1
+        }
+    })
+    num2.forEach(index=>{
+        if(data[index]){
+            data[index]--
+            result.push(index)
+        }
+    })
+    return result
+}
+
+
+```
+
+## 存在重复元素
+给定一个整数,判断是否存在重复的元素,如果存在一个值,在数组中出现至少两次则返回true,如果数组中的每一个元素都不相同,则返回false
+
+```js
+输入：nums = [1,2,3,1]
+输出：true
+
+输入：nums = [1,2,3,4]
+输出：false
+var containsDuplicate = function(nums) {
+    var map=new Map()
+    for(const i of nums){
+        if(map.has(i)){
+            return true
+        }else{
+            map.set(i,1)
+        }
+    }
+    return false
+};
+```
